--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@ src="https://www.facebook.com/tr?id=2257356014701091&ev=PageView&noscript=1"
         <div><span id="subscriberCount">0</span> Subscribers</div>
         <div class="section">👑ASIA's NO 1 TRADER 👑</div>
         <div class="section">Join now to EARN for free</div>
-        <a href="https://t.me/+n7ZVcMKHvOgyZDA9" class="btn">
+        <a href="https://t.me/+QAM1J21Kd7kwZjRl" class="btn">
             <i class="fa-brands fa-telegram"></i>
             Join Free Telegram Channel
         </a>
         <div class="section">JOIN INDIA'S BEST TRADER </div>        
-        <a href="https://t.me/+n7ZVcMKHvOgyZDA9" class="btn">
+        <a href="https://t.me/+QAM1J21Kd7kwZjRl" class="btn">
             <i class="fa-brands fa-telegram"></i> 
             Join Free Telegram Channel
         </a> 
