--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ src="https://www.facebook.com/tr?id=2257356014701091&ev=PageView&noscript=1"
 <body>
      <div class="container">
          <img src="./sunil.png" alt="Profile" class="profile-img">
-         <h1>⚡ SACHIN MEHTA ⚡</h1>
+         <h1>⚡ Trade With Sunil ⚡</h1>
         <h5> LOSS RECOVERY CHANNEL </h5>
         <div><span id="subscriberCount">0</span> Subscribers</div>
         <div class="section">👑ASIA's NO 1 TRADER 👑</div>
